# code-pal

./: LICENSE  README.md  pyproject.toml
code_pal/: __main__.py  ai_engine.py  cli.py  command_parser.py  git_operations.py  task_manager.py
